Fixed colour contrast of text on light background

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -25,7 +25,7 @@ p {
 }
 
 blockquote {
-    font-size: rem-calc(36);
+    font-size: rem-calc(38);
     line-height: rem-calc(38); 
     margin: 0 auto;
     max-width: rem-calc(680);
